force-app/main/default/objects/BU_Staging__c/BU_Staging__c.object-meta.xml
<CustomObject>
    <description>Used as a staging object for bulk upload on private operator portal.</description>
    <label>PO Upload</label>
    <nameField>
        <displayFormat>BU - {000000}</displayFormat>
        <label>BU Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Upload</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>