force-app/main/default/objects/BU_Staging__c/fields/Bus_Driver_ID__c.field-meta.xml
<CustomField>
    <fullName>Bus_Driver_ID__c</fullName>
    <label>Bus Driver ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>