force-app/main/default/objects/BU_Staging__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>BU_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>