force-app/main/default/objects/BU_Staging__c/fields/Case_Number_Operator__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_Operator__c</fullName>
    <label>Ext Case No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>