force-app/main/default/objects/BU_Staging__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <label>Case Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Email - Live Traffic</fullName>
            </value>
            <value>
                <fullName>Email - TMC</fullName>
            </value>
            <value>
                <fullName>Email - HCF</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Email - E2C</fullName>
            </value>
            <value>
                <fullName>CFM API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>