force-app/main/default/objects/BU_Staging__c/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <label>Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Triage</fullName>
            </value>
            <value>
                <fullName>Pre-Registration</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Allocation</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Awaiting Advice</fullName>
            </value>
            <value>
                <fullName>Draft in Progress</fullName>
            </value>
            <value>
                <fullName>Senior Review</fullName>
            </value>
            <value>
                <fullName>Editor Review</fullName>
            </value>
            <value>
                <fullName>Manager Review</fullName>
            </value>
            <value>
                <fullName>MAGS Approved</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Awaiting MO Contact Approval</fullName>
            </value>
            <value>
                <fullName>MO Contact Rejected</fullName>
            </value>
            <value>
                <fullName>Advice Received</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Awaiting Signature</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Ready For Printing</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Signed and Emailed</fullName>
            </value>
            <value>
                <fullName>Signatory Rejected</fullName>
            </value>
            <value>
                <fullName>Closed - NRR</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed with Customer</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>