force-app/main/default/objects/BU_Staging__c/fields/Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile__c</fullName>
    <label>Contact Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>