force-app/main/default/objects/BU_Staging__c/fields/Contact_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Contact_Salutation__c</fullName>
    <label>Contact Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cr</fullName>
            </value>
            <value>
                <fullName>Dr</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mr/s</fullName>
            </value>
            <value>
                <fullName>Mr and Mrs</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Prof</fullName>
            </value>
            <value>
                <fullName>Rev</fullName>
            </value>
            <value>
                <fullName>Reverend The Hon</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>The Hon</fullName>
            </value>
            <value>
                <fullName>The Hon Dr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>