force-app/main/default/objects/BU_Staging__c/fields/Contact_Second_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Second_Name__c</fullName>
    <label>Contact Second Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>