force-app/main/default/objects/BU_Staging__c/fields/Contact_Work__c.field-meta.xml
<CustomField>
    <fullName>Contact_Work__c</fullName>
    <label>Contact Work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>