force-app/main/default/objects/BU_Staging__c/fields/Date_Time_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Incident__c</fullName>
    <label>Date / Time of Incident</label>
    <length>255</length>
    <type>Text</type>
</CustomField>