force-app/main/default/objects/BU_Staging__c/fields/Direction_of_travel__c.field-meta.xml
<CustomField>
    <fullName>Direction_of_travel__c</fullName>
    <label>Direction of travel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>