force-app/main/default/objects/BU_Staging__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <description>Used to store all the exception occurred while processing the record from staging to the case and contact object.</description>
    <label>Failure Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>