force-app/main/default/objects/BU_Staging__c/fields/Issue_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Issue_Level_1__c</fullName>
    <label>Issue Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planning the Trip</fullName>
            </value>
            <value>
                <fullName>The Bus</fullName>
            </value>
            <value>
                <fullName>The Bus Stop</fullName>
            </value>
            <value>
                <fullName>Unrelated to Journey</fullName>
            </value>
            <value>
                <fullName>Sydney Light Rail Route</fullName>
            </value>
            <value>
                <fullName>Sydney Light Rail Stop</fullName>
            </value>
            <value>
                <fullName>The Tram</fullName>
            </value>
            <value>
                <fullName>The Tram Stop</fullName>
            </value>
            <value>
                <fullName>Bykko</fullName>
            </value>
            <value>
                <fullName>Community Transport Central Coast</fullName>
            </value>
            <value>
                <fullName>Hillsbus</fullName>
            </value>
            <value>
                <fullName>Interline Bus Service</fullName>
            </value>
            <value>
                <fullName>Keolis Downer</fullName>
            </value>
            <value>
                <fullName>Newcastle Transport</fullName>
            </value>
            <value>
                <fullName>On Board</fullName>
            </value>
            <value>
                <fullName>Pickup Point</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Premier Motor Service</fullName>
            </value>
            <value>
                <fullName>Punchbowl Bus Company</fullName>
            </value>
            <value>
                <fullName>Transdev NSW</fullName>
            </value>
            <value>
                <fullName>Transit Systems West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>