force-app/main/default/objects/BU_Staging__c/fields/Issue_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Issue_Level_2__c</fullName>
    <label>Issue Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boarding/Alighting</fullName>
            </value>
            <value>
                <fullName>Brochure/Media</fullName>
            </value>
            <value>
                <fullName>Bus Operation</fullName>
            </value>
            <value>
                <fullName>Bus Stop Location/Access</fullName>
            </value>
            <value>
                <fullName>Environmental Issues</fullName>
            </value>
            <value>
                <fullName>Internal Matters</fullName>
            </value>
            <value>
                <fullName>More Options</fullName>
            </value>
            <value>
                <fullName>Not Categorised (N/A)</fullName>
            </value>
            <value>
                <fullName>On Board Announcements</fullName>
            </value>
            <value>
                <fullName>On Board Comfort</fullName>
            </value>
            <value>
                <fullName>Other Passengers</fullName>
            </value>
            <value>
                <fullName>Phoning the Depot</fullName>
            </value>
            <value>
                <fullName>Printed Timetable</fullName>
            </value>
            <value>
                <fullName>Public Timetable Case</fullName>
            </value>
            <value>
                <fullName>Real-time apps</fullName>
            </value>
            <value>
                <fullName>School Bus Operation</fullName>
            </value>
            <value>
                <fullName>Special Event Bus</fullName>
            </value>
            <value>
                <fullName>The Depot</fullName>
            </value>
            <value>
                <fullName>Timetable</fullName>
            </value>
            <value>
                <fullName>Unrelated to Journey</fullName>
            </value>
            <value>
                <fullName>Waiting for the Bus</fullName>
            </value>
            <value>
                <fullName>Access to Tram Stop</fullName>
            </value>
            <value>
                <fullName>An incident / accident</fullName>
            </value>
            <value>
                <fullName>Announcements</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Kiosk</fullName>
            </value>
            <value>
                <fullName>L1 Dulwich Hill Line</fullName>
            </value>
            <value>
                <fullName>My Light Rail service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>