force-app/main/default/objects/BU_Staging__c/fields/Issue_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Issue_Level_3__c</fullName>
    <label>Issue Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accessibility</fullName>
            </value>
            <value>
                <fullName>Accident with Bus</fullName>
            </value>
            <value>
                <fullName>Accident with Vehicle (not bus)</fullName>
            </value>
            <value>
                <fullName>Advertisements Bad</fullName>
            </value>
            <value>
                <fullName>Advertisements Good</fullName>
            </value>
            <value>
                <fullName>Air Conditioning - Not Working</fullName>
            </value>
            <value>
                <fullName>Air Conditioning - Too Cold</fullName>
            </value>
            <value>
                <fullName>Air Conditioning - Too Hot</fullName>
            </value>
            <value>
                <fullName>Animal Restrictions</fullName>
            </value>
            <value>
                <fullName>Anti-Social Behaviour</fullName>
            </value>
            <value>
                <fullName>Apps Not Working</fullName>
            </value>
            <value>
                <fullName>Apps Wrong Information</fullName>
            </value>
            <value>
                <fullName>Bicycle Restrictions</fullName>
            </value>
            <value>
                <fullName>Boarding Rules</fullName>
            </value>
            <value>
                <fullName>Broken Seats/Stopping Bell</fullName>
            </value>
            <value>
                <fullName>Building Works</fullName>
            </value>
            <value>
                <fullName>Bus Bunching</fullName>
            </value>
            <value>
                <fullName>Bus Cancelled</fullName>
            </value>
            <value>
                <fullName>Bus Early</fullName>
            </value>
            <value>
                <fullName>Bus Infrequent/Excess Wait</fullName>
            </value>
            <value>
                <fullName>Bus in Restricted</fullName>
            </value>
            <value>
                <fullName>Bus Late</fullName>
            </value>
            <value>
                <fullName>Bus Overshot</fullName>
            </value>
            <value>
                <fullName>Bus Reliability</fullName>
            </value>
            <value>
                <fullName>Bus Terminated</fullName>
            </value>
            <value>
                <fullName>Bus Unreliable</fullName>
            </value>
            <value>
                <fullName>Caught in Doors</fullName>
            </value>
            <value>
                <fullName>Christmas Decorations</fullName>
            </value>
            <value>
                <fullName>Connection Intermodal</fullName>
            </value>
            <value>
                <fullName>Corporate Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>