force-app/main/default/objects/BU_Staging__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <description>Job Id for each bulk upload for uniqueness and reporting purpose.</description>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>