force-app/main/default/objects/BU_Staging__c/fields/Location_Level3__c.field-meta.xml
<CustomField>
    <fullName>Location_Level3__c</fullName>
    <label>Location Level 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>