force-app/main/default/objects/BU_Staging__c/fields/Location_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Location_Level_1__c</fullName>
    <label>Location Level 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>