force-app/main/default/objects/BU_Staging__c/fields/Location_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Location_Level_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Level 3</label>
    <referenceTo>Taxonomy_Metadata__c</referenceTo>
    <relationshipName>BU_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>