force-app/main/default/objects/BU_Staging__c/fields/Location_Level_3_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Level_3_Id__c</fullName>
    <label>Location Level 3 (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>