force-app/main/default/objects/BU_Staging__c/fields/Location_of_incident_issue__c.field-meta.xml
<CustomField>
    <fullName>Location_of_incident_issue__c</fullName>
    <label>Location of incident/issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>