force-app/main/default/objects/BU_Staging__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Light Rail</fullName>
            </value>
            <value>
                <fullName>On Demand</fullName>
            </value>
            <value>
                <fullName>Ferry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>