force-app/main/default/objects/BU_Staging__c/fields/Origin_Details__c.field-meta.xml
<CustomField>
    <fullName>Origin_Details__c</fullName>
    <label>Origin Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>tfnsw</fullName>
            </value>
            <value>
                <fullName>Sydney Trains</fullName>
            </value>
            <value>
                <fullName>NSW Trains</fullName>
            </value>
            <value>
                <fullName>RMS Website</fullName>
            </value>
            <value>
                <fullName>RMS Intranet</fullName>
            </value>
            <value>
                <fullName>Direct Email</fullName>
            </value>
            <value>
                <fullName>OEH Email</fullName>
            </value>
            <value>
                <fullName>Other Email</fullName>
            </value>
            <value>
                <fullName>131500</fullName>
            </value>
            <value>
                <fullName>Direct Phone</fullName>
            </value>
            <value>
                <fullName>TTY</fullName>
            </value>
            <value>
                <fullName>131236</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Facsimile</fullName>
            </value>
            <value>
                <fullName>CE Letter</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>feedbackpassthrough@transport.nsw.gov.au</fullName>
            </value>
            <value>
                <fullName>feedback@transportnsw.info</fullName>
            </value>
            <value>
                <fullName>customerliaison@transport.nsw.gov.au</fullName>
            </value>
            <value>
                <fullName>nswtrainlink.feedback@transport.nsw.gov.au</fullName>
            </value>
            <value>
                <fullName>Roads Webform</fullName>
            </value>
            <value>
                <fullName>Transport Webform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>