force-app/main/default/objects/BU_Staging__c/fields/Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Code__c</fullName>
    <label>Post/Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>