force-app/main/default/objects/BU_Staging__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Date Sensitive – MO specified due date</fullName>
            </value>
            <value>
                <fullName>Individual - Standard</fullName>
            </value>
            <value>
                <fullName>MP - Standard</fullName>
            </value>
            <value>
                <fullName>Urgent – MO specified due date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>