force-app/main/default/objects/BU_Staging__c/fields/Re_assignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Re_assignment_Reason__c</fullName>
    <label>Re-assignment Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>