force-app/main/default/objects/BU_Staging__c/fields/Response_Requested__c.field-meta.xml
<CustomField>
    <fullName>Response_Requested__c</fullName>
    <label>Response Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>