force-app/main/default/objects/BU_Staging__c/fields/Response_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Response_to_Customer__c</fullName>
    <label>Response to Customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>