force-app/main/default/objects/BU_Staging__c/fields/Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Row_Number__c</fullName>
    <label>Row No.</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>