force-app/main/default/objects/BU_Staging__c/fields/Vehicle_Registration__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registration__c</fullName>
    <label>Vehicle Registration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>