force-app/main/default/objects/BU_Staging__c/fields/Vexatious_Customer__c.field-meta.xml
<CustomField>
    <fullName>Vexatious_Customer__c</fullName>
    <label>Vexatious Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>