force-app/main/default/objects/BU_Staging__c/listViews/System_Admins_View.listView-meta.xml
<ListView>
    <fullName>System_Admins_View</fullName>
    <columns>NAME</columns>
    <columns>Job_Id__c</columns>
    <columns>Contact__c</columns>
    <columns>Contact_Id__c</columns>
    <columns>Case_Number__c</columns>
    <columns>Case_Id__c</columns>
    <columns>Contact_First_Name__c</columns>
    <columns>Contact_Second_Name__c</columns>
    <columns>Direction_of_travel__c</columns>
    <columns>Case_Number_Operator__c</columns>
    <columns>Processing_Status__c</columns>
    <columns>Failure_Reason__c</columns>
    <columns>Created_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>System Admins View</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>